--- a/package.json
+++ b/package.json
@@ -8,7 +8,7 @@
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "bin": {
-    "nodemon": "./bin/jcup.js"
+    "jcup": "./bin/jcup.js"
   },
   "keywords": [],
   "author": "",
