--- a/package.json
+++ b/package.json
@@ -1,8 +1,13 @@
 {
   "name": "jcup",
-  "version": "0.0.15",
-  "description": "",
+  "version": "0.0.16",
+  "description": "una cli para facilitar el desarrollo de aplicacions en spring-boot",
   "main": "./bin/jcup.js",
+  "repository": {
+    "type": "git",
+    "url": "git+https://github.com/asuridev/jcup"
+  },
+  "homepage": "https://github.com/asuridev/jcup#readme",
   "scripts": {
     "start":"./bin/jcup.js",
     "test": "echo \"Error: no test specified\" && exit 1"
